--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "ai_function"
 version = "0.1.0"
 edition = "2021"
+authors = ["Taylor g"]
+description = "Procedural Macro for creating text from a function to use in Large language Models"
+license = "MIT"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
